[package]
name = "quantum-worm"
version = "0.1.0"
edition = "2021"
description = "A quantum-resistant secure file transfer system."
license = "MIT"
repository = "https://github.com/goldenhippo58/quantum-worm"
documentation = "https://docs.rs/quantum-worm"

[lib] # Ensure this section is present
crate-type = ["lib"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
aes-gcm = "0.10"
rand = "0.8"
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3"
generic-array = "0.14"                             # Ensure you are using one consistent version of generic-array

[package.metadata.docs.rs]
features = ["default"]
